@@ -1,0 +1,5 @@
+{
+"name" : "HTMLTags Plugin",
+"version" : "0.0.4",
+"dependencies" : []
+}
