@@ -1,0 +1,5 @@
+#!/bin/bash
+
+DOCUMENT="$1"
+shift
+echo -n "${@}"|sed 's/<[^>]*>//g' 2>/dev/null
