@@ -1,0 +1,5 @@
+#!/bin/bash
+
+DOCUMENT="$1"
+shift
+echo -n "<div style=\"font-size:48px;\">${@}</div>"
